fixed problem with players view on small screen

--- a/scrabble.css
+++ b/scrabble.css
@@ -1,6 +1,7 @@
 
 body {
     font-weight: bold;
+    font-family: Arial;
     width: 100vw;
     height: auto;
     overflow-x: hidden;
@@ -27,10 +28,9 @@ body {
 .players-view {
     flex-grow: 1;
     display: flex;
-    /* align-items: flex-end; */
     align-items: center;
     flex-direction: column;
-    min-width: 700px;
+    min-width: 750px;
 }
 .result {
     margin: auto auto;
@@ -136,6 +136,8 @@ button {
 
 .nick {
     color: brown;
+    margin: 0 0 10px 50px;
+
 }
 
 .racks {
